--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <th:block th:replace="fragments/head :: meta"></th:block>
+    <th:block th:replace="fragments/head :: style"></th:block>
+    <th:block th:replace="fragments/head :: script"></th:block>
 </head>
 <body>
-$END$
+<div class="container-fluid">
+    <header th:include="fragments/navbar :: navbar"></header>
+
+    <div class="container">
+        <p class="h2">Login to Chiricker</p>
+
+        <form class="mt-3" th:method="POST" th:action="@{/login}" th:object="${user}">
+            <div class="form-group mb-2">
+                <label for="handle">Handle</label>
+                <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                    <div class="input-group-addon">@</div>
+                    <input type="text" class="form-control" id="handle" placeholder="handle" th:field="*{handle}"/>
+                </div>
+            </div>
+
+            <div class="form-group mb-2">
+                <label for="password">Password</label>
+                <input class="form-control" type="password" id="password" name="password"/>
+            </div>
+
+            <div class="has-danger mb-2" th:if="${error}">
+                <small class="form-control-feedback" th:text="${error}"></small>
+            </div>
+
+            <div class="form-group mb-2">
+                <input class="" name="remember" type="checkbox"/>
+                <label>Remember me?</label>
+            </div>
+
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
+            <button class="btn btn-info" type="submit" th:text="Login"></button>
+        </form>
+
+        <p class="mt-3">Don't have an account yet? <a href="/register">Register</a></p>
+    </div>
+</div>
 </body>
 </html>
