Fixed issues with previous commit

--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -18,7 +18,7 @@
                 <label for="handle">Handle</label>
                 <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                     <div class="input-group-addon">@</div>
-                    <input type="text" class="form-control" id="handle" placeholder="handle" th:field="*{handle}"/>
+                    <input type="text" class="form-control" id="handle" placeholder="handle" th:field="${user.handle}"/>
                 </div>
             </div>
 
