--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,26 +1,25 @@
 <th:block th:fragment="navbar">
-    <nav class="navbar navbar-toggleable-sm navbar-light fixed-top bg-faded">
 
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarSupportedContent"
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <a class="navbar-brand d-block d-lg-none" th:href="@{/}">Chiricker</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="nav-link navbar-brand hidden-md-up mr-auto" th:href="@{/}">Chiricker</a>
+            <div class="collapse navbar-collapse col-sm-7 offset-sm-2" id="navbarSupportedContent">
 
-        <div class="container">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/}">Home</a>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item nav-link disabled">
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                 </ul>
 
-                <ul class="hidden-sm-down nav navbar-nav mx-auto">
+                <ul class="nav navbar-nav d-none d-lg-block mx-auto">
                     <li class="nav-item">
                         <a th:href="@{/}">
-                            <img class="img-fluid rounded-circle" src="/assets/images/logo.png"
+                            <img class="img-fluid rounded-circle nav-image" src="/assets/images/logo.png"
                                  alt="Chiricker logo"/>
                         </a>
                     </li>
@@ -34,18 +33,47 @@
                         <a class="nav-link" th:href="@{/register}">Register</a>
                     </li>
 
-                    <li sec:authorize="isAuthenticated()" class="nav-item mr-sm-2">
-                        <form th:method="POST" th:action="@{/logout}">
-                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                            <button type="submit" class="btn btn-outline-success hidden-sm-down"
-                                    th:href="@{/logout}"
-                                    th:text="Logout"></button>
-                            <button type="submit" class="nav-item nav-link btn btn-link hidden-md-up"
-                                    th:href="@{/logout}" th:text="Logout"></button>
-                        </form>
+                    <li sec:authorize="isAuthenticated()" class="nav-item dropdown d-none d-lg-block" id="nav-profile">
+                        <a class="nav-link" href="#" id="navbarDropdown" role="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/7/70/User_icon_BLACK-01.png"
+                                 class="nav-image img-fluid rounded-circle" id="profileImg"/>
+                        </a>
+
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a readonly="readonly" class="dropdown-item text-center  dropdown-item-name" id="profileLink">
+                                <div class="dropdown-item text-center  dropdown-item-name" id="profileName"></div>
+                                <div class="dropdown-item text-center text-secondary dropdown-item-name" id="profileHandle"></div>
+                            </a>
+
+                            <div class="dropdown-divider"></div>
+
+                            <a class="nav-item nav-link dropdown-item text-center nav-link-green" th:href="@{/settings}" th:text="Settings"></a>
+
+                            <div class="dropdown-divider"></div>
+
+                            <form th:method="POST" th:action="@{/logout}">
+                                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                                <button type="submit"
+                                        class="nav-item nav-link dropdown-item text-center nav-link-green"
+                                        th:href="@{/logout}" th:text="Logout"></button>
+                            </form>
+                        </div>
                     </li>
                 </ul>
-            </div>
         </div>
     </nav>
+
+    <script>
+        $(window).resize(() => {
+            let width = window.innerWidth;
+            let nav = $("div.collapse.navbar-collapse");
+            if (width > 991) nav.addClass("col-sm-7 offset-sm-2");
+            else nav.removeClass("col-sm-7 offset-sm-2");
+        });
+
+        $("#nav-profile").ready(() => {
+            getUserProfileInfo();
+        });
+    </script>
 </th:block>
