--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -1,24 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-    <th:block th:replace="fragments/head :: meta"></th:block>
-    <th:block th:replace="fragments/head :: style"></th:block>
-    <th:block th:replace="fragments/head :: script"></th:block>
-</head>
-<body>
-<div class="container-fluid">
-    <header th:include="fragments/navbar :: navbar"></header>
-
-    <div class="container">
+<div class="card border-light mb-3 w-100" style="width: 18rem;">
+    <div class="card-body">
         <p class="h2">Login to Chiricker</p>
 
-        <form class="mt-3" th:method="POST" th:action="@{/login}" th:object="${user}">
+        <form class="mt-3" th:method="POST" th:action="@{/login}">
             <div class="form-group mb-2">
                 <label for="handle">Handle</label>
-                <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                    <div class="input-group-addon">@</div>
-                    <input type="text" class="form-control" id="handle" placeholder="handle" th:field="${user.handle}"/>
+                <div class="input-group">
+                    <div class="input-group-text">@</div>
+                    <input type="text" class="form-control" id="handle" placeholder="handle" name="handle"/>
                 </div>
             </div>
 
@@ -28,7 +17,7 @@
             </div>
 
             <div class="has-danger mb-2" th:if="${error}">
-                <small class="form-control-feedback" th:text="${error}"></small>
+                <small class="text-danger" th:text="${error}"></small>
             </div>
 
             <div class="form-group mb-2">
@@ -44,5 +33,3 @@
         <p class="mt-3">Don't have an account yet? <a href="/register">Register</a></p>
     </div>
 </div>
-</body>
-</html>
