Added option to edit account and profile setting and ability to change profile picture, stored in dropbox.

--- a/src/main/resources/templates/fragments/user/user-card.html
+++ b/src/main/resources/templates/fragments/user/user-card.html
@@ -2,7 +2,7 @@
     <div class="col">
         <div class="card border-light mb-3" style="width: 18rem;">
             <div class="card-body"  id="userCard">
-                <img class="img-fluid rounded-circle" id="userCardPicture"/>
+                <img class="img-fluid rounded-circle" alt="Profile picture" id="userCardPicture"/>
 
                 <h5 class="card-title" id="userCardName"></h5>
 
