--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -34,31 +34,7 @@
                     </li>
 
                     <li sec:authorize="isAuthenticated()" class="nav-item dropdown d-none d-lg-block" id="nav-profile">
-                        <a class="nav-link" href="#" id="navbarDropdown" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/7/70/User_icon_BLACK-01.png"
-                                 class="nav-image img-fluid rounded-circle" id="profileImg"/>
-                        </a>
-
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a readonly="readonly" class="dropdown-item text-center  dropdown-item-name" id="profileLink">
-                                <div class="dropdown-item text-center  dropdown-item-name" id="profileName"></div>
-                                <div class="dropdown-item text-center text-secondary dropdown-item-name" id="profileHandle"></div>
-                            </a>
-
-                            <div class="dropdown-divider"></div>
-
-                            <a class="nav-item nav-link dropdown-item text-center nav-link-green" th:href="@{/settings}" th:text="Settings"></a>
-
-                            <div class="dropdown-divider"></div>
-
-                            <form th:method="POST" th:action="@{/logout}">
-                                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                                <button type="submit"
-                                        class="nav-item nav-link dropdown-item text-center nav-link-green"
-                                        th:href="@{/logout}" th:text="Logout"></button>
-                            </form>
-                        </div>
+                        <th:block th:replace="fragments/user/nav-profile"></th:block>
                     </li>
                 </ul>
         </div>
@@ -70,10 +46,6 @@
             let nav = $("div.collapse.navbar-collapse");
             if (width > 991) nav.addClass("col-sm-7 offset-sm-2");
             else nav.removeClass("col-sm-7 offset-sm-2");
-        });
-
-        $("#nav-profile").ready(() => {
-            getUserProfileInfo();
         });
     </script>
 </th:block>
