--- a/src/main/resources/templates/users/settings.html
+++ b/src/main/resources/templates/users/settings.html
@@ -68,6 +68,7 @@
     });
 
 function isFileValid() {
+    return true;
     const supportedTypes = ['image/jpeg', 'image/png', 'image/bmp'];
 
     let file = $("#profilePicture")[0].files[0];
