--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -1,3 +1,21 @@
-<div>
+<div class="row" sec:authorize="isAuthenticated()">
 
+    <div th:replace="fragments/user/user-card"></div>
+
+    <div class="col col-lg-8">
+        <div class="card border-light mb-3 w-100" style="width: 18rem;">
+            <div class="card-body" id="content">
+
+                <th:block th:replace="fragments/index/chirick-form"></th:block>
+
+                <hr class="my-1" />
+            </div>
+        </div>
+    </div>
+
+    <script>
+        $(function () {
+            setChirickToggling();
+        })();
+    </script>
 </div>
