--- a/src/main/resources/templates/users/settings.html
+++ b/src/main/resources/templates/users/settings.html
@@ -2,16 +2,16 @@
 
     <div class="row">
 
-        <div th:replace="fragments//user/user-card :: user-card"></div>
+        <div th:replace="fragments//user/user-card"></div>
 
-        <div class="col col-md-8">
+        <div class="col col-sm-8">
             <div class="card border-light mb-3 w-100" style="width: 18rem;">
                 <div class="card-body">
                     <form class="form" th:method="POST" enctype="multipart/form-data" onsubmit="return isFileValid()" th:action="@{/settings}" th:object="${user}">
                         <legend>Account Settings</legend>
                         <hr class="display-2"/>
 
-                        <div th:replace="fragments//user/register-form-fields :: register-fields"></div>
+                        <div th:replace="fragments//user/register-form-fields"></div>
 
                         <legend class="mt-4">Profile Settings</legend>
                         <hr class="display-2"/>
@@ -63,48 +63,44 @@
 </div>
 
 <script>
-    $("#userCard").ready(() => {
-        getUserCard();
-    });
-
 function isFileValid() {
-    return true;
     const supportedTypes = ['image/jpeg', 'image/png', 'image/bmp'];
 
     let file = $("#profilePicture")[0].files[0];
     let fileSize = file.size;
-    let isFileTypeSupported = $.inArray(file.type, supportedTypes);
+    let isFileTypeSupported = $.inArray(file.type, supportedTypes) !== -1;
 
-    let errorDiv = $("#picError");
-    if (fileSize < 1000000 && !isFileTypeSupported) {
-        console.log('true');
-        errorDiv.remove();
-        return true;
-    }
+    if (fileSize < 1000000 && isFileTypeSupported) return true;
 
     let pictureDiv = $("#picture");
-    if (errorDiv) {
+
+    let errorDiv = $("#picError");
+    if (!errorDiv.length) {
         errorDiv = $("<div id=\"picError\">");
         pictureDiv.append(errorDiv);
+    } else {
+        errorDiv.html("");
     }
 
     if (fileSize > 1000000) {
         let sizeError = $("#sizeError");
-        if (sizeError) {
-            errorDiv.append("<small class=\"text-danger\" id=\"sizeError\">");
+        if (!sizeError.length) {
+            sizeError = $("<p class=\"text-danger mb-0\" id=\"sizeError\">");
+            errorDiv.append(sizeError);
         }
-        sizeError.text("File size cannot be more than 1MB.");
+        sizeError.text("File size cannot be more than 1MB. ");
     }
 
-    if (isFileTypeSupported) {
+    if (!isFileTypeSupported) {
+        console.log(fileSize);
         let typeError = $("#typeError");
-        if (typeError) {
-            errorDiv.append("<small class=\"text-danger\" id=\"typeError\">");
+        if (!typeError.length) {
+            typeError = $("<p class=\"text-danger mb-0\" id=\"typeError\">");
+            errorDiv.append(typeError);
         }
-        typeError.text("File type has to be jpg, jpeg, png or bmp.");
+        typeError.text("File type has to be jpg, jpeg, png or bmp. ");
     }
 
     return false;
 }
-
 </script>
