--- a/src/main/resources/templates/chiricks/details.html
+++ b/src/main/resources/templates/chiricks/details.html
@@ -10,7 +10,7 @@
         </div>
     </div>
 
-    <div class="col col-lg-8">
+    <div class="col col-12 col-sm-12 col-md-12 col-lg-8">
 
         <div id="alert"></div>
 
