--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -22,9 +22,9 @@
                         <form class="form mt-4" action="/search">
                             <div class="form-group">
                                 <div class="input-group">
-                                    <input class="form-control form-control-lg" name="param"/>
+                                    <input class="form-control form-control-lg" name="query"/>
                                     <span class="input-group-btn">
-                                        <button class="btn btn-success btn-lg" type="button">Search</button>
+                                        <button class="btn btn-success btn-lg" type="submit">Search</button>
                                     </span>
                                 </div>
                             </div>
