--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -8,44 +8,81 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-            <div class="collapse navbar-collapse col-sm-7 offset-sm-2" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse col col-md-12 offset-md-0 col-lg-7 offset-lg-2"
+             id="navbarSupportedContent">
 
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item nav-link disabled">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                </ul>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item nav-link disabled">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+            </ul>
 
-                <ul class="nav navbar-nav d-none d-lg-block mx-auto">
-                    <li class="nav-item">
-                        <a th:href="@{/}">
-                            <img class="img-fluid rounded-circle nav-image" src="/assets/images/logo.png"
-                                 alt="Chiricker logo"/>
-                        </a>
-                    </li>
-                </ul>
+            <ul class="nav navbar-nav d-none d-lg-block mx-auto">
+                <li class="nav-item">
+                    <a th:href="@{/}">
+                        <img class="img-fluid rounded-circle nav-image" src="/assets/images/logo.png"
+                             alt="Chiricker logo"/>
+                    </a>
+                </li>
+            </ul>
 
-                <ul class="nav navbar-nav ml-auto">
-                    <li sec:authorize="!isAuthenticated()" class="nav-item mr-sm-2">
-                        <a class="nav-link" th:href="@{/login}">Login</a>
-                    </li>
-                    <li sec:authorize="!isAuthenticated()" class="nav-item mr-sm-2">
-                        <a class="nav-link" th:href="@{/register}">Register</a>
-                    </li>
+            <ul class="nav navbar-nav ml-auto">
+                <li sec:authorize="!isAuthenticated()" class="nav-item mr-sm-2">
+                    <a class="nav-link" th:href="@{/login}">Login</a>
+                </li>
+                <li sec:authorize="!isAuthenticated()" class="nav-item mr-sm-2">
+                    <a class="nav-link" th:href="@{/register}">Register</a>
+                </li>
 
-                    <li sec:authorize="isAuthenticated()" class="nav-item dropdown d-none d-lg-block" id="nav-profile">
-                        <th:block th:replace="fragments/user/nav-profile"></th:block>
-                    </li>
-                </ul>
+                <li sec:authorize="hasRole('ROLE_ADMIN')" class="d-block d-lg-none nav-item mr-sm-2">
+                    <a class="nav-link" th:href="@{/admin}">Admin</a>
+                </li>
+
+                <li sec:authorize="hasRole('ROLE_ADMIN')" class="d-none d-lg-block nav-item mr-sm-2 mt-3">
+                    <a class="nav-link" th:href="@{/admin}">Admin</a>
+                </li>
+
+                <li sec:authorize="isAuthenticated()" class="d-block d-lg-none nav-item mr-sm-2">
+                    <form class="" th:action="@{/search}">
+                        <div class="input-group">
+                            <input class="form-control" type="search" name="query" placeholder="Search for peers"/>
+                            <span class="input-group-btn">
+                                <button class="btn btn-outline-success" type="submit">&#x1f50d;</button>
+                            </span>
+                        </div>
+                    </form>
+                </li>
+
+                <li sec:authorize="isAuthenticated()" class="d-none d-lg-block nav-item mr-sm-2 mt-3">
+                    <form class="form-inline my-2 my-lg-0" th:action="@{/search}">
+                        <div class="input-group">
+                            <input class="form-control form-control-sm" type="search" name="query" placeholder="Search for peers"/>
+                            <span class="input-group-btn">
+                                <button class="btn btn-outline-success" type="submit">&#x1f50d;</button>
+                            </span>
+                        </div>
+                    </form>
+                </li>
+
+                <li sec:authorize="isAuthenticated()" class="d-block d-lg-none nav-item mr-sm-2">
+                    <a class="nav-link" th:href="@{/profile}">Profile</a>
+                </li>
+
+                <li sec:authorize="isAuthenticated()" class="d-block d-lg-none nav-item mr-sm-2">
+                    <a class="nav-link" th:href="@{/settings}">Settings</a>
+                </li>
+
+                <li sec:authorize="isAuthenticated()" class="d-block d-lg-none nav-item mr-sm-2">
+                    <form th:method="POST" th:action="@{/logout}">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                        <button type="submit" class="nav-link navbar-link">Logout</button>
+                    </form>
+                </li>
+
+                <li sec:authorize="isAuthenticated()" class="nav-item dropdown d-none d-lg-block" id="nav-profile">
+                    <th:block th:replace="fragments/user/nav-profile"></th:block>
+                </li>
+            </ul>
         </div>
     </nav>
-
-    <script>
-        $(window).resize(() => {
-            let width = window.innerWidth;
-            let nav = $("div.collapse.navbar-collapse");
-            if (width > 991) nav.addClass("col-sm-7 offset-sm-2");
-            else nav.removeClass("col-sm-7 offset-sm-2");
-        });
-    </script>
 </th:block>
