--- a/src/main/resources/templates/users/profile/followers.html
+++ b/src/main/resources/templates/users/profile/followers.html
@@ -10,7 +10,7 @@
         </div>
     </div>
 
-    <div class="col">
+    <div class="col col-12 col-sm-12 col-md-12 col-lg-8">
 
         <div class="mb-1 row w-100" id="alert"></div>
 
