--- a/src/main/resources/templates/fragments/user/nav-profile.html
+++ b/src/main/resources/templates/fragments/user/nav-profile.html
@@ -1,6 +1,6 @@
 <a class="nav-link" href="#" id="navbarDropdown" role="button"
    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    <img class="nav-image img-fluid rounded-circle" alt="Profile" id="profileImg"/>
+    <img class="img-fluid rounded-circle nav-image" alt="Profile" id="profileImg"/>
 </a>
 
 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
