--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -17,7 +17,7 @@
                 </li>
             </ul>
 
-            <ul class="nav navbar-nav d-none d-lg-block mx-auto">
+            <ul class="navbar-nav d-none d-lg-block mx-auto">
                 <li class="nav-item">
                     <a th:href="@{/}">
                         <img class="img-fluid rounded-circle nav-image" src="/assets/images/logo.png"
@@ -26,39 +26,33 @@
                 </li>
             </ul>
 
-            <ul class="nav navbar-nav ml-auto">
-                <li sec:authorize="!isAuthenticated()" class="nav-item mr-sm-2">
+            <ul class="navbar-nav ml-auto">
+                <li sec:authorize="!isAuthenticated()" class="nav-item nav-link">
                     <a class="nav-link" th:href="@{/login}">Login</a>
                 </li>
-                <li sec:authorize="!isAuthenticated()" class="nav-item mr-sm-2">
+
+                <li sec:authorize="!isAuthenticated()" class="nav-item nav-link">
                     <a class="nav-link" th:href="@{/register}">Register</a>
                 </li>
 
-                <li sec:authorize="hasRole('ROLE_ADMIN')" class="d-block d-lg-none nav-item mr-sm-2">
-                    <a class="nav-link" th:href="@{/admin}">Admin</a>
+                <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item nav-link dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Admin
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="adminDropdown">
+                        <a class="dropdown-item" href="/admin/users">Users</a>
+                        <a class="dropdown-item" href="/admin/users/disabled">Disabled Users</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/admin/logs">Logs</a>
+                    </div>
                 </li>
 
-                <li sec:authorize="hasRole('ROLE_ADMIN')" class="d-none d-lg-block nav-item mr-sm-2 mt-3">
-                    <a class="nav-link" th:href="@{/admin}">Admin</a>
-                </li>
-
-                <li sec:authorize="isAuthenticated()" class="d-block d-lg-none nav-item mr-sm-2">
-                    <form class="" th:action="@{/search}">
+                <li sec:authorize="isAuthenticated()" class="nav-link nav-item mr-sm-2">
+                    <form th:action="@{/search}">
                         <div class="input-group">
-                            <input class="form-control" type="search" name="query" placeholder="Search for peers"/>
+                            <input class="form-control form-control-sm form-rounded" type="search" name="query" placeholder="Search for peers"/>
                             <span class="input-group-btn">
-                                <button class="btn btn-outline-success" type="submit">&#x1f50d;</button>
-                            </span>
-                        </div>
-                    </form>
-                </li>
-
-                <li sec:authorize="isAuthenticated()" class="d-none d-lg-block nav-item mr-sm-2 mt-3">
-                    <form class="form-inline my-2 my-lg-0" th:action="@{/search}">
-                        <div class="input-group">
-                            <input class="form-control form-control-sm" type="search" name="query" placeholder="Search for peers"/>
-                            <span class="input-group-btn">
-                                <button class="btn btn-outline-success" type="submit">&#x1f50d;</button>
+                                <button class="btn nav-search-btn" type="submit">&#x1f50d;</button>
                             </span>
                         </div>
                     </form>
